# node-ffi-rust

./: Cargo.toml  README.md  index.js  package-lock.json  package.json  test.sh
src/: lib.rs
