[package]
name = "ffi_crypto"
version = "0.1.0"
authors = ["lucdew <lucdew@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
rsa = { git = "https://github.com/lucdew/RSA", branch = "oaep"}
num-bigint = { version = "0.6", features = ["rand", "i128", "u64_digit", "prime", "zeroize"], package = "num-bigint-dig" }
rand = "0.7.0"
sha2 = "0.8.0"


[lib]
crate-type = ["cdylib"]

